# clad-body

./: .gitignore  CLAUDE.md  LICENSE  MEASUREMENT_INTERNALS.md  README.md  Taskfile.yml  bench_measure_grad.py  pyproject.toml  validate_stomach_100.py  viz_4view_dual_contour.py  viz_contour_comparison.py  viz_stomach.py  viz_worst_case.py  viz_worst_cases_from_validation.py
.github/workflows/: ci.yml
clad_body/: __init__.py
clad_body/load/: __init__.py  anny.py  mhr.py
clad_body/measure/: __init__.py  _circumferences.py  _lengths.py  _render.py  _slicer.py  _soft_circ.py  anny.py  common.py  mhr.py  registry.py
clad_body/measure/testdata/: female_155_45.json  female_178_100.json
clad_body/measure/testdata/anny/female_average/: anny_params.json  expected_measurements.json
clad_body/measure/testdata/anny/female_curvy/: anny_params.json  expected_measurements.json
clad_body/measure/testdata/anny/female_plus_size/: anny_params.json  expected_measurements.json
clad_body/measure/testdata/anny/female_slim/: anny_params.json  expected_measurements.json
experiments/: soft_circ_4view.py  soft_circ_4view_loop.py  soft_circ_avg.py  soft_circ_back_coverage.md  soft_circ_compare.py  soft_circ_debug_back.py  soft_circ_experiment.py  soft_circ_gallery.py  soft_circ_improve.py  soft_circ_visualize.py
tests/: conftest.py  test_measure_anny.py  test_measure_grad.py  test_measure_grad_gradcheck.py  test_measure_mhr.py  test_registry.py
tests/testdata/: inseam_saturating_body.json
tools/: render_contour.py  render_rotation_gif.py  sensitivity_map.py
(+16 files in other folders)
